User-Management-system

--- a/angular.json
+++ b/angular.json
@@ -34,10 +34,14 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+  "src/assets",
+  "src/favicon.ico"
+
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -92,9 +96,13 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+                "src/assets",
+  "src/favicon.ico"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+
               "src/styles.css"
             ],
             "scripts": []
@@ -102,5 +110,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
